# Isotope

./: Cargo.toml  README.md
core/src/: lib.rs
core/src/modules/: module.rs
core/src/window/: main_window.rs  style.rs
core/src/window/keybinds/: input_manager.rs
obsidian/Isotope Editor/.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  workspace  workspace.json
obsidian/Isotope Editor/.obsidian/plugins/file-tree-alternative/: manifest.json
obsidian/Isotope Editor/.obsidian/plugins/obsidian-admonition/: data.json
obsidian/Isotope Editor/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
obsidian/Isotope Editor/.obsidian/plugins/obsidian-markmind/: data.json
obsidian/Isotope Editor/.obsidian/plugins/obsidian-style-settings/: data.json
obsidian/Isotope Editor/Systems/: Ion Editor.md  Message System.md  Modules and Communication.excalidraw.md  Modules.md  Plugin.md  Plugins.md
obsidian/Isotope Editor/Systems/Specs/: Aesthetic.md  Tabula Rasa Example.excalidraw.md  Tabula Rasa.md
obsidian/Isotope Editor/dev/: Kanban.md
src/: main.rs  tests.rs  window.rs
src/plugins/: plugin.rs
src/window/: main_window.rs
src/window/keybinds/: input_manager.rs
